# records

./: .gitignore  Dockerfile  README.md  records.code-workspace
back/: Gemfile  app.rb  config.ru
back/dao/: albums.rb  store.rb
back/endpoints/: base.rb  health.rb  proxy.rb  records.rb
back/record_keeper/: .env.example  Cargo.toml  Makefile.toml  Rocket.toml
back/record_keeper/resources/: album.json
back/record_keeper/src/: main.rs
back/record_keeper/src/endpoints/: dev_proxy.rs  get_album.rs  health.rs  mod.rs
back/record_keeper/src/errors/: access_token_error.rs  mod.rs
back/record_keeper/src/models/: album_details.rs  app_config.rs  client_token_response.rs  health_check_response.rs  host_details.rs  mod.rs
back/record_keeper/src/utils/: mod.rs  spotify_creds.rs
back/serializers/: album.rb
front/: package-lock.json  package.json  tsconfig.json  vite.config.ts
front/public/: index.html
front/src/: index.tsx
front/src/components/: App.tsx  Hello.tsx  NavBar.tsx  ThemeModeSwitch.tsx
