[package]
name = "record_keeper"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
rocket = { version = "0.5", features = ["secrets", "tls", "json", "uuid"] }
rocket_cors = { version = "0.6.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
